--- a/nano/static/src/js/app/templates/invoice_footer.html
+++ b/nano/static/src/js/app/templates/invoice_footer.html
@@ -16,11 +16,11 @@
 <tr id="total_tr">
   <td colspan="2" class="inv_btn">
     <% if (Invoice.get("status") == "draft") { %>
-        <a href="#" class="button normal" id="add_invoice_item" title="Add Invoice Item">
-      <span><em>Add Invoice Item</em></span>
+        <a href="#" class="btn btn-primary btn-sm" id="add_invoice_item" title="Add Invoice Item">
+      <span>Add Invoice Item</span>
     </a> &nbsp; 
-    <a href="#" class="button normal" id="reorder_invoice_items">
-      <span><em>Reorder</em></span>
+    <a href="#" class="btn btn-default btn-sm" id="reorder_invoice_items">
+      <span>Reorder</span>
     </a>
     <% } %>
   </td>
