--- a/nano/templates/invoice/edit.html
+++ b/nano/templates/invoice/edit.html
@@ -10,24 +10,25 @@
     <li class="active">Edit</li>
   </ul>
 
-  <div class="workspace-inner">
+  <h1>Edit invoice</h1>
 
-    <form class="create inline invoice" method="post" action="{{ url_for('.edit', id=invoice.id) }}">
-      <div class="header">Edit invoice</div>  
-      <div class="fields">
-        {{ form.csrf_token }}
-        {{ render_input(form.contact_id) }} 
-        {{ render_input(form.reference, cls='reference', size=4) }} 
-        {{ render_input(form.date_issued_nice, cls='date') }} 
-        {{ render_input(form.payment_term_id) }} 
-        {{ render_input(form.due_date_nice, cls='date') }}
-        {{ render_input(form.currency_code) }}
-        <div class="field">
-          <button class="button normal" type="submit">Continue</button>
+  <div class="workspace-inner">
+    <p>Make changes to the invoice below</p>
+    <form role="form" class="form-horizontal invoice" method="post" action="{{ url_for('.edit', id=invoice.id) }}">
+      {{ form.hidden_tag() }}
+      {{ render_input(form.contact_id, class='') }} 
+      {{ render_input(form.reference, cls='reference', size=4) }} 
+      {{ render_input(form.date_issued_nice, cls='date') }} 
+      {{ render_input(form.payment_term_id, class='') }} 
+      {{ render_input(form.due_date_nice, cls='date') }}
+      {{ render_input(form.currency_code, class='') }}
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button class="btn btn-primary" type="submit">Continue</button>
            or 
           <a href="javascript:history.back(-1);">Cancel</a>
         </div>
-      </div>
+    </div>
     </form>
 
   </div>
