--- a/nano/templates/settings/tax_rates.html
+++ b/nano/templates/settings/tax_rates.html
@@ -2,46 +2,47 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-
   {% include 'account/_filter.html' %}
   {% include 'settings/_subnav.html' %}
-  
-  <div class="workspace-inner">
-    
-    <form class="create inline tax-rates" method="post" action="{{ url_for('.tax_rates') }}">
-      <div class="header">Taxes</div>  
-      <div class="fields">
 
+  <div class="workspace-inner">
+    <h2>Tax rates</h2>
+    <form role="form" class="form-horizontal" method="post" action="{{ url_for('.tax_rates') }}">
+      {{ form.hidden_tag() }}
+      {{ form.new_tax_rate.csrf_token }}
         {% for form_field in form.current_taxes.entries %}
-          <div class="field">
-            <label></label>
-            <div class="input">
-              {{ form_field.uid }}
-              {{ form_field.rate_name }}
-              {{ form_field.rate }}
-            <a class='delete' href="{{ url_for('settings.delete_tax_rate', id=form_field.uid.data) }}"> Delete</a>
+          {{ form_field.csrf_token }}
+          <div class="form-group row">
+            {{ form_field.uid }}
+            {{ form_field.csrf_token }}
+            <div class="col-xs-2 col-sm-offset-2">
+              {{ form_field.rate_name(class='form-control') }}
+            </div>
+            <div class="col-xs-2">
+                {{ form_field.rate(class='form-control') }}
+            </div>
+            <div class="col-xs-2">
+              <a class='delete' href="{{ url_for('settings.delete_tax_rate', id=form_field.uid.data) }}"> Delete</a>
             </div>
           </div>
         {% endfor %}
-        
-        <div class="field vspacer"></div>
-        
-        <div class="field"> 
-          <label>New tax</label>
-          <div class="input">
-            <div class='input vtop'>
-              {{ form.new_tax_rate.rate_name(placeholder='TAX name') }}
+
+        <div class="form-group row">
+          <label class="col-sm-2 control-label">New tax</label>
+            <div class='col-xs-2'>
+              {{ form.new_tax_rate.rate_name(class='form-control', placeholder='TAX name') }}
               {{ render_errors(form.new_tax_rate.rate_name) }}
             </div>
-            <div class='input vtop'>
-              {{ form.new_tax_rate.rate(placeholder='Rate percentage') }}
-              {{ render_errors(form.new_tax_rate.rate) }} 
+            <div class='col-xs-2'>
+              {{ form.new_tax_rate.rate(class='form-control', placeholder='Rate percentage') }}
+              {{ render_errors(form.new_tax_rate.rate) }}
             </div>
-          </div>
         </div>
 
-        <div class="field">
-          <button class="btn btn-primary" type="submit">Save</button>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-primary" type="submit">Save</button>
+          </div>
         </div>
       </div>
     </form>
